--- a/.project
+++ b/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>images</name>
+			<type>2</type>
+			<location>C:/Users/Dennis/git/RiseOfTheYoloids2/src/roty/images</location>
+		</link>
+	</linkedResources>
 </projectDescription>
